# j2me-vm

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  DEVELOPMENT_DESIGN.md  ImageTest.java  InputStreamPolymorphismTest.java  InputTest.java  MANIFEST.MF  Makefile  Makefile-ns  Makefile-windows  Manifest.txt  Point.java  PolymorphismTest.java  PolymorphismTestMIDlet.java  PolymorphismTestMain.java  README.md  RMSTest.java  ResourceTest.java  ResourceTestMIDlet.java  TestResourceAsStream.java  ThreadTest.java  build.sh  build_rt_jar.bat  build_rt_jar.ps1  build_rt_jar.sh  build_tests.sh  cmake_install.cmake  debug_log.txt  gen_image.py  j2me-vm  manifest.txt  ns-build.bat  rms_manifest.txt  run.sh  run_test.sh  sources.txt  test_iconv  test_iconv.cpp  (+2 more)
.trae/documents/: J2ME规范.md  Phase 2 Implementation Plan.md  Phase 4 Implementation Plan.md  doc.md
docs/: ARCHITECTURE.md  BUILD_CONFIG.md  Phase 4 Implementation Plan.md  Refactoring Interpreter.cpp.md  WINDOWS_BUILD.md  测试结果报告.md  测试计划.md  项目完成度评估.md
scripts/: fix_interpreter.py  refactor_interpreter.py
scripts/other/: build_image_test.sh  test_sources.ps1
scripts/run_build/: build_rt_jar.ps1
src/: main.cpp
src/core/: AudioManager.cpp  AudioManager.hpp  ClassFile.hpp  ClassParser.cpp  ClassParser.hpp  Diagnostics.cpp  Diagnostics.hpp  EventLoop.cpp  EventLoop.hpp  HeapManager.cpp  HeapManager.hpp  Interpreter.cpp  Interpreter.hpp  Interpreter_ClassLoader.cpp  J2MEVM.cpp  J2MEVM.hpp  JavaThread.hpp  Logger.cpp  Logger.hpp  MIDIPlayer.cpp  MIDIPlayer.hpp  NativeRegistry.cpp  NativeRegistry.hpp  Opcodes.hpp  RuntimeTypes.cpp  RuntimeTypes.hpp  SoundManager.cpp  SoundManager.hpp  StackFrame.cpp  StackFrame.hpp  ThreadManager.hpp  TimerManager.hpp  VMConfig.hpp
src/core/instructions/: Instructions_Comparisons.cpp  Instructions_Constants.cpp  (+8 more)
src/loader/: JarLoader.cpp  JarLoader.hpp
src/native/: ImageCommon.cpp  ImageCommon.hpp  NativeInputStream.cpp  NativeInputStream.hpp  j2me_media_AudioPlayer.cpp  j2me_media_AudioPlayer.hpp  java_io_ByteArrayInputStream.cpp  java_io_ByteArrayInputStream.hpp  java_io_DataOutputStream.cpp  java_io_DataOutputStream.hpp  java_io_InputStream.cpp  java_io_InputStream.hpp  java_io_PrintStream.cpp  java_io_PrintStream.hpp  java_io_RandomAccessFile.cpp  java_io_RandomAccessFile.hpp  java_io_ResourceInputStream.cpp  java_io_ResourceInputStream.hpp  java_lang_Class.cpp  java_lang_Class.hpp  java_lang_Double.cpp  java_lang_Double.hpp  java_lang_Float.cpp  java_lang_Float.hpp  java_lang_Math.cpp  java_lang_Math.hpp  java_lang_Object.cpp  java_lang_Object.hpp  java_lang_String.cpp  java_lang_String.hpp  java_lang_StringBuffer.cpp  java_lang_StringBuffer.hpp  java_lang_System.cpp  java_lang_System.hpp  java_lang_Thread.cpp  java_lang_Thread.hpp  java_util_Timer.cpp  java_util_Timer.hpp  javax_microedition_io_Connector.cpp  javax_microedition_io_Connector.hpp  (+18 more)
src/platform/: GraphicsContext.cpp  GraphicsContext.hpp
src/util/: DataReader.hpp  FileUtils.cpp  FileUtils.hpp
stubs/: TestArgsMain.java  compile.sh  sources.txt
temp_manifest/: MANIFEST.MF
tests/: MainTest.java  PrimitiveTypesTest.java  README.md  StreamTest.java  TestInputStream.java
tests/graphics/: GraphicsTest.java
tests/src/: ArrayTest.java  AudioTest.java  ByteArrayInputByteSignTest.java  ByteArrayInputStreamSyncTest.java  ByteArrayInputStreamSyncVerify.java  ByteArrayInputStreamTest.java  BytecodeTest.java  CollectionComprehensiveTest.java  CollectionTest.java  ComprehensiveIOTest.java  DebugStringTest.java  ExceptionTest.java  IOTest.java  MainMethodTest.java  MainTest.java  MathComprehensiveTest.java  MathTest.java  ObjectToStringTest.java  RMSTestMIDlet.java  RandomAccessFileTest.java  RandomAccessTestMIDlet.java  SimpleAudioTest.java  SimpleStringTest.java  SimpleTest.java  StringComprehensiveTest.java  StringTest.java  SyncTest.java  TestImageMIDlet.java  ThreadTest.java  WrapperClassesTest.java
(+139 files in other folders)
